# cado

./: .gitignore  LICENSE.txt  README.md  logging.yaml  pyproject.toml  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: ci.yaml
cado/: cell_1.txt  cell_2.txt  main.py
cado/app/: app.py  disk.py  example.py  message.py  response.py  routes.py  session_state.py
cado/app/static/: index.html
cado/cli/: cli.py  config.py  main.py
cado/core/: cell.py  cell_status.py  environment.py  language.py  notebook.py  notebook_details.py
cado/examples/: .gitignore  example.cado  is-even.cado  sum.cado
cado/ui/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
cado/ui/src/: index.css  index.tsx
cado/ui/src/components/: App.tsx  Cell.tsx  Connection.tsx  Disconnect.tsx  Library.tsx  Notebook.tsx  Notebooks.tsx  Toolbar.tsx
cado/ui/src/hooks/: image.ts  keys.ts
cado/ui/src/lib/: appConfig.ts  format.ts  sorting.ts  types.ts
cado/ui/src/lib/models/: cell.ts  cellStatus.ts  language.ts  message.ts  notebook.ts  notebookDetails.ts
cado/ui/src/widgets/: Button.tsx  ReorderIcon.tsx  SlyTextBox.tsx  TextBox.tsx
tests/app/: test_message.py  test_routes.py
tests/cli/: test_main.py
tests/core/: test_cell.py  test_notebook.py
