[tool.poetry]
authors = ["Chris Gregory <christopher.b.gregory@gmail.com>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["python", "notebook", "development", "environment"]
description = "Python notebook development environment."
license = "Apache Software License"
name = "cado"
readme = "README.md"
repository = "https://github.com/gregorybchris/cado"
version = "0.1.5"
include = ["cado/ui/dist/**/*", "logging.yaml"]


[[tool.poetry.packages]]
include = "cado"

[tool.poetry.dependencies]
click = "^8.1.3"
fastapi = "^0.70.0"
pydantic = "^1.9.0"
python = ">=3.8.1,<4"
uvicorn = { version = "^0.15.0", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
covcheck = "^0.4.2"
flake8 = "^6.0.0"
ipdb = "^0.13.9"
mypy = "^1.0.1"
pylint = "^2.16.2"
pyproject-flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
requests = "^2.26.0"
semver = "^2.13.0"
toml = "^0.10.2"
yapf = "^0.32.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
cado = "cado.cli.cli:main"

[tool.covcheck]
branch = 4.0
line = 52.0

[tool.flake8]
ignore = ""
max-line-length = 120

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pylint.basic]
good-names = ["f", "i"]
notes = ["FIXME"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.master]
extension-pkg-allow-list = ["pydantic"]

[tool.pylint.messages_control]
disable = ["missing-module-docstring", "missing-class-docstring"]

[tool.pylint.reports]
output-format = "colorized"

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
indent_width = 4
